--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>co.nz.breakpoint.jmeter.modifiers</groupId>
 	<artifactId>jmeter-wssecurity</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 	<name>jmeter-wssecurity</name>
 	<url>http://maven.apache.org</url>
 
@@ -44,6 +44,7 @@
 			<groupId>org.apache.jmeter</groupId>
 			<artifactId>ApacheJMeter_jms</artifactId>
 			<version>3.0</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
