--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>co.nz.breakpoint.jmeter.modifiers</groupId>
+	<groupId>nz.co.breakpoint</groupId>
 	<artifactId>jmeter-wssecurity</artifactId>
 	<packaging>jar</packaging>
-	<version>1.4-SNAPSHOT</version>
+	<version>1.4</version>
 	<name>jmeter-wssecurity</name>
 	<url>http://maven.apache.org</url>
 
