--- a/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSUsernameTokenPreProcessorResources.properties
+++ b/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSUsernameTokenPreProcessorResources.properties
@@ -10,3 +10,5 @@ addNonce.displayName=Add Nonce
 addNonce.shortDescription=Whether to add a Nonce element to the UsernameToken
 addCreated.displayName=Add Created
 addCreated.shortDescription=Whether to add a Created element to the UsernameToken
+precisionInMilliSeconds.displayName=Sets precision of timestamp to milliseconds
+precisionInMilliSeconds.shortDescription=Sets precision of timestamp to milliseconds
