Add timestamp precision option

--- a/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSTimestampPreProcessorResources.properties
+++ b/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSTimestampPreProcessorResources.properties
@@ -2,3 +2,5 @@ displayName=SOAP Message Timestamp
 UsernameToken.displayName=Timestamp Settings
 timeToLive.displayName=Time to live
 timeToLive.shortDescription=Credential expire time
+precisionInMilliSeconds.displayName=Milliseconds precision
+precisionInMilliSeconds.shortDescription=Sets precision of timestamp to milliseconds
