--- a/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSUsernameTokenPreProcessorResources.properties
+++ b/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSUsernameTokenPreProcessorResources.properties
@@ -1,4 +1,9 @@
 displayName=SOAP Message UsernameToken
+Header.displayName=WSS Header Settings
+actor.displayName=SOAP Actor
+actor.shortDescription=The SOAP actor attribute is used to address the Header element to a specific endpoint.
+mustUnderstand.displayName=Must Understand
+mustUnderstand.shortDescription=The SOAP mustUnderstand attribute can be used to indicate whether a header entry is mandatory or optional for the recipient to process.
 UsernameToken.displayName=UsernameToken Settings
 username.displayName=Username
 username.shortDescription=The username (duh)
