--- a/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSDecryptionPostProcessorResources.properties
+++ b/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSDecryptionPostProcessorResources.properties
@@ -1,4 +1,7 @@
 displayName=SOAP Message Decrypter
+Header.displayName=WSS Header Settings
+actor.displayName=SOAP Actor
+actor.shortDescription=The SOAP actor attribute is used to address the Header element to a specific endpoint.
 Certificate.displayName=Certificate Settings
 keystoreFile.displayName=Keystore File
 keystoreFile.shortDescription=The keystore containing the private key to use when decrypting the message
