--- a/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSEncryptionPreProcessorResources.properties
+++ b/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSEncryptionPreProcessorResources.properties
@@ -24,3 +24,4 @@ createEncryptedKey.displayName=Create Encrypted Key
 createEncryptedKey.shortDescription=Indicates whether to encrypt the symmetric key into an EncryptedKey or not
 partsToSecure.displayName=Parts to Encrypt
 partsToSecure.shortDescription=Optionally specify parts of the message to be encrypted (instead of only the body)
+partsToSecure.tableHeaders=ID|Name|Namespace|Encode
