--- a/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSSignaturePreProcessorResources.properties
+++ b/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSSignaturePreProcessorResources.properties
@@ -26,3 +26,4 @@ useSingleCertificate.displayName=Use Single Certificate
 useSingleCertificate.shortDescription=If checked, a single certificate will be used
 partsToSecure.displayName=Parts to Sign
 partsToSecure.shortDescription=Optionally specify parts of the message to be signed (instead of only the body) 
+partsToSecure.tableHeaders=ID|Name|Namespace|Encode
