--- a/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSTimestampPreProcessorResources.properties
+++ b/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSTimestampPreProcessorResources.properties
@@ -5,7 +5,7 @@ actor.shortDescription=The SOAP actor attribute is used to address the Header el
 mustUnderstand.displayName=Must Understand
 mustUnderstand.shortDescription=The SOAP mustUnderstand attribute can be used to indicate whether a header entry is mandatory or optional for the recipient to process.
 UsernameToken.displayName=Timestamp Settings
-timeToLive.displayName=Time to live
-timeToLive.shortDescription=Credential expire time
+timeToLive.displayName=Time to live (seconds)
+timeToLive.shortDescription=Credential expire time in seconds
 precisionInMilliSeconds.displayName=Milliseconds precision
 precisionInMilliSeconds.shortDescription=Sets precision of timestamp to milliseconds
