Add attachment support

--- a/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSDecryptionPostProcessorResources.properties
+++ b/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSDecryptionPostProcessorResources.properties
@@ -9,3 +9,7 @@ keystorePassword.displayName=Keystore Password
 keystorePassword.shortDescription=The password for the keystore
 certPassword.displayName=Private Key Password
 certPassword.shortDescription=The password for the private key to use for decryption
+Decryption.displayName=Decryption Settings
+attachments.displayName=Attachments to Decrypt
+attachments.shortDescription=
+attachments.tableHeaders=Content-ID|Bytes (base64-encoded)
