--- a/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSEncryptionPreProcessorResources.properties
+++ b/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSEncryptionPreProcessorResources.properties
@@ -25,3 +25,6 @@ createEncryptedKey.shortDescription=Indicates whether to encrypt the symmetric k
 partsToSecure.displayName=Parts to Encrypt
 partsToSecure.shortDescription=Optionally specify parts of the message to be encrypted (instead of only the body)
 partsToSecure.tableHeaders=ID|Name|Namespace|Encode
+attachments.displayName=Attachments to Encrypt
+attachments.shortDescription=
+attachments.tableHeaders=Content-ID|Bytes (base64)|Headers|Output Mode|Output Destination
