--- a/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSSignaturePreProcessorResources.properties
+++ b/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSSignaturePreProcessorResources.properties
@@ -27,3 +27,6 @@ useSingleCertificate.shortDescription=If checked, a single certificate will be u
 partsToSecure.displayName=Parts to Sign
 partsToSecure.shortDescription=Optionally specify parts of the message to be signed (instead of only the body) 
 partsToSecure.tableHeaders=ID|Name|Namespace|Encode
+attachments.displayName=Attachments to Sign
+attachments.shortDescription=
+attachments.tableHeaders=Content-ID|Bytes (base64-encoded)|Headers
