Consistent columns headers

--- a/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSEncryptionPreProcessorResources.properties
+++ b/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSEncryptionPreProcessorResources.properties
@@ -27,4 +27,4 @@ partsToSecure.shortDescription=Optionally specify parts of the message to be enc
 partsToSecure.tableHeaders=ID|Name|Namespace|Encode
 attachments.displayName=Attachments to Encrypt
 attachments.shortDescription=
-attachments.tableHeaders=Content-ID|Bytes (base64)|Headers|Output Mode|Output Destination
+attachments.tableHeaders=Content-ID|Bytes (base64-encoded)|Headers|Output Mode|Output Destination
