--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>nz.co.breakpoint</groupId>
     <artifactId>jmeter-wssecurity</artifactId>
     <packaging>jar</packaging>
-    <version>1.6-SNAPSHOT</version>
+    <version>1.6</version>
     <name>jmeter-wssecurity</name>
 
     <properties>
