Add local failure switch and credentials for response validation

--- a/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSDecryptionPostProcessorResources.properties
+++ b/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSDecryptionPostProcessorResources.properties
@@ -9,6 +9,12 @@ keystorePassword.displayName=Keystore Password
 keystorePassword.shortDescription=The password for the keystore
 certPassword.displayName=Private Key Password
 certPassword.shortDescription=The password for the private key to use for decryption
+Validation.displayName=Validation Settings
+failOnWSSException.displayName=Fail Sampler on WSS Exception
+failOnWSSException.shortDescription=Generate Sampler failure if WSS Exception occurs during decryption or validation of WSS header tokens
+credentials.displayName=Credentials for processing of WSS Header Tokens
+credentials.shortDescription=List of passwords for keystore entries or username tokens for validation
+credentials.tableHeaders=Identifier (Username or Key Alias)|Password
 Decryption.displayName=Decryption Settings
 attachments.displayName=Attachments to Decrypt
 attachments.shortDescription=
