Remove local failure switch and private key field

--- a/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSDecryptionPostProcessorResources.properties
+++ b/src/main/resources/nz/co/breakpoint/jmeter/modifiers/WSSDecryptionPostProcessorResources.properties
@@ -2,20 +2,17 @@ displayName=SOAP Message Decrypter
 Header.displayName=WSS Header Settings
 actor.displayName=SOAP Actor
 actor.shortDescription=The SOAP actor attribute is used to address the Header element to a specific endpoint.
-Certificate.displayName=Certificate Settings
+Certificate.displayName=Keystore Settings
 keystoreFile.displayName=Keystore File
 keystoreFile.shortDescription=The keystore containing the private key to use when decrypting the message
 keystorePassword.displayName=Keystore Password
 keystorePassword.shortDescription=The password for the keystore
 certPassword.displayName=Private Key Password
 certPassword.shortDescription=The password for the private key to use for decryption
-Validation.displayName=Validation Settings
-failOnWSSException.displayName=Fail Sampler on WSS Exception
-failOnWSSException.shortDescription=Generate Sampler failure if WSS Exception occurs during decryption or validation of WSS header tokens
-credentials.displayName=Credentials for processing of WSS Header Tokens
+Decryption.displayName=Decryption Settings
+credentials.displayName=Credentials for WSS Processing
 credentials.shortDescription=List of passwords for keystore entries or username tokens for validation
 credentials.tableHeaders=Identifier (Username or Key Alias)|Password
-Decryption.displayName=Decryption Settings
 attachments.displayName=Attachments to Decrypt
 attachments.shortDescription=
 attachments.tableHeaders=Content-ID|Bytes (base64-encoded)
