--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>nz.co.breakpoint</groupId>
     <artifactId>jmeter-wssecurity</artifactId>
     <packaging>jar</packaging>
-    <version>1.7</version>
+    <version>1.8-SNAPSHOT</version>
     <name>${project.artifactId}</name>
 
     <licenses>
