--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,8 @@
     <packaging>jar</packaging>
     <version>1.8-SNAPSHOT</version>
     <name>${project.artifactId}</name>
+    <description>Apache JMeter plugin for signing, encrypting and decrypting SOAP messages (WS-Security)</description>
+    <url>https://github.com/tilln/jmeter-wssecurity</url>
 
     <licenses>
         <license>
@@ -25,6 +27,15 @@
         <connection>scm:git:git://github.com/tilln/jmeter-wssecurity.git</connection>
         <developerConnection>scm:git:git@github.com:tilln/jmeter-wssecurity.git</developerConnection>
     </scm>
+
+    <developers>
+        <developer>
+            <name>Till Neunast</name>
+            <email>till.neunast@breakpoint.co.nz</email>
+            <organization>Breakpoint</organization>
+            <organizationUrl>http://breakpoint.co.nz</organizationUrl>
+        </developer>
+    </developers>
 
     <dependencies>
         <dependency>
@@ -85,4 +96,76 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>publish</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>2.2.1</version>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>2.9.1</version>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.5</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                        <version>1.6.8</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <serverId>ossrh</serverId>
+                            <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+            <distributionManagement>
+                <snapshotRepository>
+                    <id>ossrh</id>
+                    <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+                </snapshotRepository>
+                <repository>
+                    <id>ossrh</id>
+                    <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+    </profiles>
+
 </project>
